--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -8,7 +8,7 @@ RUN docker-php-ext-install pdo pdo_mysql
 
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
-RUN composer install
+RUN composer install --no-dev --optimize-autoloader
 
 EXPOSE 8000
 
