--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -2,8 +2,7 @@ APP_NAME=MyFinance
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
-APP_FRONTEND_URL=http://localhost:5173
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -22,22 +21,17 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=myfinance
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
-# SESSION_DRIVER=database
-SESSION_DRIVER=array # for API only
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
-
-SANCTUM_STATEFUL_DOMAINS= # for SPA cookies, leave empty for API only
-SANCTUM_EXPIRATION=43200  # token expiration in minutes (30 days)
-CORS_ALLOWED_ORIGINS=http://localhost:5173
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=public
@@ -53,30 +47,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-# Dev
 MAIL_MAILER=log
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="noreply@myfinance.com"
+MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
-
-# Prod
-# MAIL_MAILER=smtp
-# MAIL_HOST=
-# MAIL_PORT=587
-# MAIL_USERNAME=
-# MAIL_PASSWORD=
-# MAIL_ENCRYPTION=tls
-
-# AWS HOEEKKK CUHH
-# LKS:
-# Landau
-# Kleffner
-# Syndrom
 
 # AWS_ACCESS_KEY_ID=
 # AWS_SECRET_ACCESS_KEY=
@@ -84,4 +62,4 @@ MAIL_FROM_NAME="${APP_NAME}"
 # AWS_BUCKET=
 # AWS_USE_PATH_STYLE_ENDPOINT=false
 
-# VITE_APP_NAME="${APP_NAME}"
+VITE_APP_NAME="${APP_NAME}"
